Feat: C안 UI 개선 - 상위 분류 제목 수정 및 색상 다양화

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       <!-- 가운데 핵심 메뉴 UI 영역 -->
       <div class="container">
         <div class="abtest-btns">
-          <button onclick="location.href='a_test.html'">A안 보기</button>
-          <button onclick="location.href='b_test.html'">B안 보기</button>
+          <button onclick="location.href='a_test.html'">A안 테스트 페이지로 이동</button>
+          <button onclick="location.href='b_test.html'">B안 테스트 페이지로 이동</button>
+          <button onclick="location.href='c_test.html'">C안 테스트 페이지로 이동</button>
         </div>
       </div>
     </div>
